--- a/css/pages/interviewYO.css
+++ b/css/pages/interviewYO.css
@@ -832,6 +832,7 @@ body > #fade > section.visual.under.recruit,
     line-height: 1.6 !important;
     word-break: break-all !important;
     overflow-wrap: break-word !important;
+    box-sizing: border-box !important;
   }
   
   .pankuzu span {
@@ -1789,5 +1790,6 @@ align-items: center;
   body.breadcrumb-legacy .pankuzu {
         padding-top: 20px !important;
         padding-left: 20px !important;
+        padding-right: 20px !important;
       }
     }
